fix: let Safari wrap pre blocks

--- a/static/app.css
+++ b/static/app.css
@@ -172,7 +172,8 @@ pre {
   padding: 10px;
   background-color: #555;
   color: #fff;
-  text-wrap: balance;
+  text-wrap: wrap;
+  white-space: pre-wrap;
 }
 
 /* ... */
